got the footer stles to relect properly and fixed the flex wrap display on all pages

--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,12 @@ nav ul li a {
 
 
 /*************************footer styles*****************************/
+footer .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .footer-dark {
   flex-direction: row;
